2004-03-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.h (STORE_WITH_LOG_AND_UPDATE_RANGE): Added check
	against infinities and NaNs.  Most paths were already blocked, but
	modern systems can have "inf" and "nan" right in the datafile,
	which wasn't tested against.

2004-03-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc (fit): Clarify behaviour in case no "using"
	specification was given.

2004-03-02  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/standard.c (f_tanh): Added extra code to return an exact 1.0
	for large absolute arguments.  Fixes SF bug #908184.

	* term/x11.trm [TERM_HELP]: Explain colour control via command
	line options more clearly, including the -xrm for colors other
	than the background.

	* docs/gnuplot.doc (random, palette): Fixed entries showing up as
	sub-topics in the wrong places of gnuplot.gih.

2004-03-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc term/x11.trm: Fix entries appearing in 'help
	help'.

2004-02-27  Ethan Merritt  <merritt@u.washington.edu>
	
	* term/mif.trm: Revise #ifdef so that it compiles if you select
	configure --disable-filledboxes

	* src/gplt_x11.c: Add #ifdef so that it compiles if you select
	configure --disable-pm3d

2004-02-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.cyg config/config.mgw config/config.os2: Shape
	these config files to the form of config.hin generated by
	./configure. This will more easily facilitate to synchronize
	particular #(un)define options added to the ./configure procedure
	in future.

2004-02-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Fix SF bug [ 905691 ] "save" does not save correct arrow heads.

	* src/term_api.h (t_arrow_head): New enum type to provide manifest
	constants for arrow head choices.
	(arrow_head_names): Added declaration of new global in term.c.
	(arrow_style_type): Change type of member "head" from int to new
	enum.
